dev-tools/minikube/1-Platform/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oih-dev-ingress
  namespace: oih-dev-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: iam.match2.jobs
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: iam
            port: 
              number: 3099
  # - host: skm.match2.jobs
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: secret-service
  #           port:
  #             number: 3000
  # - host: flow-repository.match2.jobs
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service: 
  #           name: flow-repository
  #           port:
  #             number: 3001
  # - host: template-repository.match2.jobs
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: template-repository
  #           port:
  #             number: 3001
  # - host: auditlog.match2.jobs
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: audit-log
  #           port:
  #             number: 3007
  # - host: metadata.match2.jobs
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: meta-data-repository
  #           port:
  #             number: 3000
  # - host: component-repository.match2.jobs
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: component-repository
  #           port:
  #             number: 1234
  # - host: snapshots-service.match2.jobs
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: snapshots-service
  #           port:
  #             number: 1234
  # - host: webhooks.match2.jobs
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: webhooks
  #           port: 
  #             number: 1234
  # - host: web-ui.match2.jobs
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: web-ui
  #           port:
  #             number: 3000
  # - host: attachment-storage-service.match2.jobs
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service: 
  #           name: attachment-storage-service
  #           port:
  #             number: 3002
  # - host: data-hub.match2.jobs
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: data-hub-service
  #           port:
  #             number: 1234
  # - host: ils.match2.jobs
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: ils
  #           port:
  #             number: 3003
  # - host: app-directory.match2.jobs
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: app-directory
  #           port:
  #             number: 3000
  # - host: dispatcher-service.match2.jobs
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: dispatcher-service
  #           port:
  #             number: 3013
